--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,5 @@ sysinfo.txt
 /ZwischenPraesentation1/*.snm
 /ZwischenPraesentation1/*.toc
 /ZwischenPraesentation1/*.aux
+/ZwischenPraesentation1/*.bbl
+/ZwischenPraesentation1/*.blg
